fix font size and font spacing

--- a/src/client/styles/common.less
+++ b/src/client/styles/common.less
@@ -7,6 +7,7 @@ body {
   height: 100%;
   position: relative;
   background-color: @body-bg;
+  word-spacing: 0.2em;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
