--- a/src/client/styles/responsive.less
+++ b/src/client/styles/responsive.less
@@ -56,13 +56,7 @@
       }
     }
 
-    .join-info {
-      font-size: 18px;
-
-      a {
-        font-size: 16px;
-      }
-    }
+   
   }
 
   .slideshow .pipe pre {
@@ -142,11 +136,7 @@
   .join {
     .join-title {
       h3 {
-        font-size: 18px;
-      }
-
-      p {
-        font-size: 16px;
+        font-size: 22px;
       }
     }
 
@@ -299,7 +289,7 @@
        margin:0;
        padding: 12px 0;
        line-height: 40px;
-       font-size: 14px;
+       font-size: 18px;
        text-align: center;
 
       }
@@ -319,6 +309,8 @@
 
       a {
         min-height: 64px;
+        font-size: 18px;
+        font-weight: 700;
         padding: 12px 0;
         line-height: 40px;
       }
@@ -338,18 +330,14 @@
       font-size: 24px;
     }
 
-    p {
+    .section-content {
       font-size: 16px;
+      padding: 0 12px;
     }
   }
 
   .slideshow .pipe pre {
     font-size: 28px;
-  }
-
-  .cfs {
-    width: 200px;
-    font-size: 18px;
   }
 
   .footer .conference-info .col {
@@ -427,6 +415,11 @@
     }
   }
 
+  .join .join-title {
+    h3 {
+      font-size: 16px;
+    }
+  }
 
   .masthead .masthead-innter {
 
@@ -560,5 +553,9 @@
     &:first-child {
       margin-top: 4px;
     }
+  }
+
+  .navbar-toggle {
+    padding: 2px 4px;
   }
 }
